fixed spacing

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -1,6 +1,8 @@
 .about-me{
     background-color: #171718;
     padding-top: 40px;
+    height: auto;
+    text-align: center;
 }
 
 p{
@@ -17,6 +19,7 @@ p{
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
 }
 
 .profile-pic{
@@ -25,5 +28,7 @@ p{
   border-radius: 300px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
   background-color: aliceblue;
 }
