--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,8 +1,4 @@
 .home{
-    background-color: darkgray;
+    background-color: #171718;
 }
 
-.about-me{
-    text-align: center;
-    height: 50vh;
-}
